test/errhandling/ferguson/double-throw-single-object.good
double-throw-single-object.chpl:1: In function 'main':
double-throw-single-object.chpl:5: error: Throwing borrowed error - please throw owned
